# msvc_svml_bug

./: CMakeLists.txt  CMakeSettings.json  Common.hpp  LICENSE  Main.cpp  README.md  TestPow.cpp
.github/workflows/: ci.yml
